# libdeflate-android

./: README.md  settings.gradle
app/: build.gradle
app/src/main/c/: .gitignore  CMakeLists.txt  checksums.c  checksums.h  common.h  compressor.c  compressor.h  decompressor.c  jni_util.c  jni_util.h
app/src/main/c/libdeflate/: .gitignore  CMakeLists.txt
app/src/main/java/me/steinborn/libdeflate/: CompressionType.java  Libdeflate.java  LibdeflateAdler32.java  LibdeflateCRC32.java  LibdeflateCompressor.java  LibdeflateDecompressor.java  LibdeflateJavaUtils.java  ObjectPool.java
